style: Add mediaQueries folder and large.css, mid.css and small.css media queries files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amazon Web Scrapping</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/root.css">
+    <link rel="stylesheet" media="all and (max-width:778px)" href="./style/mediaQueries/small.css">
+    <link rel="stylesheet" media="all and (max-width:1025px)" href="./style/mediaQueries/mid.css">
+    <link rel="stylesheet" media="all and (min-width:1025px)" href="./style/mediaQueries/large.css">
+
+    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>var exports = {};</script>
