--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>var exports = {};</script>
-    <script defer type="module" src="./dist/front-end/script.js"></script>
+    <script defer type="module" src="./dist/script.js"></script>
   </head>
   <body>
     <div id="root"></div>
