feat(src/utils) Implementing loadingIndicator function

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         </button>
       </form>
     </div>
-    <div class="user-helper">
+    <div class="user-helper-wrapper">
+      <h1 class="user-helper"></h1>
     </div>
     <div class="results">
       <div class="results-wrapper">
