--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amazon Web Scrapping</title>
+
+    <!--Open Graph Protocol (OGP)-->
+    <meta property="og:title" content="Amazon Web Scraping">
+    <meta property="og:image" content="./public/image/websiteImage.png">
+    <meta property="og:description" content="Site que pesquisa por produtos no site da amazon e retorna uma lista da primeira página dos resultados">
+
+    <!--Styles-->
     <link rel="stylesheet" href="./style/root.css">
     <link rel="stylesheet" media="all and (max-width:778px)" href="./style/mediaQueries/small.css">
     <link rel="stylesheet" media="all and (max-width:1025px)" href="./style/mediaQueries/mid.css">
     <link rel="stylesheet" media="all and (min-width:1025px)" href="./style/mediaQueries/large.css">
 
-    
+    <!--Google symbol-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <!--Scripts-->
     <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>var exports = {};</script>
     <script defer type="module" src="./dist/script.js"></script>
