fix update og:image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!--Open Graph Protocol (OGP)-->
     <meta property="og:title" content="Amazon Web Scraping">
-    <meta property="og:image" content="image/websiteImage.png">
+    <meta property="og:image" content="./test/websiteImage.png">
     <meta property="og:description" content="Site que pesquisa por produtos no site da amazon e retorna uma lista da primeira página dos resultados">
 
     <!--Styles-->
