--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!--Open Graph Protocol (OGP)-->
     <meta property="og:title" content="Amazon Web Scraping">
-    <meta property="og:image" content="https://m.media-amazon.com/images/G/01/gc/designs/livepreview/amazon_dkblue_noto_email_v2016_us-main._CB468775337_.png">
+    <meta property="og:image" content="test/image.png">
     <meta property="og:description" content="Site que pesquisa por produtos no site da amazon e retorna uma lista da primeira página dos resultados">
 
     <!--Styles-->
@@ -43,7 +43,7 @@
     </div>
     <div class="results">
       <div class="results-wrapper">
-        
+       <img src="https://imgur.com/aCIsxwA" alt="">
       </div>
     </div>
     
