fix(index.html): Fixing media queries

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <!--Styles-->
     <link rel="stylesheet" href="./style/root.css">
-    <link rel="stylesheet" media="all and (max-width:778px)" href="./style/mediaQueries/small.css">
-    <link rel="stylesheet" media="all and (max-width:1025px)" href="./style/mediaQueries/mid.css">
-    <link rel="stylesheet" media="all and (min-width:1025px)" href="./style/mediaQueries/large.css">
+    <link rel="stylesheet" media="only screen and (max-width:778px)" href="./style/mediaQueries/small.css">
+    <link rel="stylesheet" media="only screen and (min-width:779px)" href="./style/mediaQueries/mid.css">
+    <link rel="stylesheet" media="only screen and (min-width:1026px)" href="./style/mediaQueries/large.css">
 
     <!--Google symbol-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
